minor additions to existing pages

--- a/Konvertierungen/word_md_notebook.ipynb
+++ b/Konvertierungen/word_md_notebook.ipynb
@@ -62,7 +62,9 @@
     "    git clone https://github.com/Digital-History-Berlin/Computational-Essays.git\n",
     "    ```\n",
     "2. Navigieren Sie zum Projektordner\n",
-    "3. Folgen Sie den weiteren Anweisungen"
+    "3. Folgen Sie den weiteren Anweisungen\n",
+    "\n",
+    "Ein beispielhaftes Word-Dokument ist ebenfalls bereits im Repository enthalten."
    ]
   },
   {
