--- a/tools/git-lfs.ipynb
+++ b/tools/git-lfs.ipynb
@@ -610,7 +610,7 @@
     "\n",
     "### Häufige Probleme und Lösungen\n",
     "\n",
-    "1. **Push schlägt fehl wegen Größenlimit**\n",
+    "1. **Push Error wegen Größenlimit**\n",
     "```bash\n",
     "# Prüfen der Dateigrößen\n",
     "git lfs ls-files --size\n",
@@ -636,6 +636,8 @@
     "## Nützliche Skripte\n",
     "\n",
     "### LFS-Status überprüfen\n",
+    "\n",
+    "Dieses Python-Skript bietet eine übersichtliche Darstellung aller LFS-Dateien in Ihrem Repository. Es ruft `git lfs ls-files --json` auf, verarbeitet die Ausgabe und zeigt jede Datei mit ihrer Größe in MB an, einschließlich einer Gesamtsumme. \n",
     "\n",
     "```python\n",
     "import subprocess\n",
